# referal_sistem

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml
config/: settings.py  urls.py
users/: models.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: auth.html  base.html  profile.html
users/tests/: test_api.py
